Disable the current implementation of a digikam-nepomuk integration.

By information from the Nepomuk maintainer, the relevant API have been replaced.
Essentially, the current code is at best not functional, at worst polluting your Nepomuk db.
A new implementation needs to be written based on current APIs.

BUG: 258837
BUG: 264124
BUG: 276457
CCBUG: 279404
BUG: 282918
BUG: 283168
BUG: 304052
CCBUG: 305079