utilities/nepomuk/digikamnepomukservice.cpp
@@ -21,6 +21,16 @@
  *
  * ============================================================ */
 
+#if 0
+// The digikam nepomuk implementation is not only buggy, but based on nepomuk
+// API which is now deprecated/unfunctional and or removed.
+// In short, it needs to be rewritten.
+
+// Code is left as an example as quite a few problems were solved with it
+// at a time when the corresponding nepomuk interface were operating.
+
+
+
 #include "digikamnepomukservice.moc"
 
 // Qt includes
@@ -1234,3 +1244,5 @@ KSharedConfig::Ptr NepomukService::digikamConfig() const
 } // namespace Digikam
 
 NEPOMUK_EXPORT_SERVICE(Digikam::NepomukService, "digikamnepomukservice")
+
+#endif
